--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.6'
 
 services:
   mysql:
-    container_name: student-mysql
+    container_name: article-mysql
     platform: linux/amd64
     image: mysql
     restart: always
@@ -11,13 +11,13 @@ services:
     volumes:
       - ./.db:/var/lib/mysql
     environment:
-      - MYSQL_DATABASE=student
+      - MYSQL_DATABASE=article
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=development
       - MYSQL_PASSWORD=d3v3l0pm3nt
     networks:
-      - student-network
+      - article-network
 
 networks:
-  student-network:
+  article-network:
     driver: bridge
